--- a/styles.css
+++ b/styles.css
@@ -27,51 +27,25 @@ h1 {
   padding: 0 20px;
 }
 
-table {
-  border-collapse: collapse;
-}
-
-th {
-  background-color: #f55;
-  color: #fff;
-}
-
-td,
-th {
-  border: 2px solid #f55;
-  padding: 10px;
-}
-
-.list {
+.parent {
   border: 2px solid;
-  margin: 20px;
-  list-style-position: inside;
-  list-style: none;
+  height: 400px;
+  width: 400px;
+  padding: 20px;
 }
-.list li:first-child {
-  background-color: #f33;
-}
-.list li:last-child {
-  background-color: #00f;
-}
-.list li:nth-child(3) {
-  background-color: #0f0;
-}
-
-nav {
-  margin-top: 50px;
+.btn {
+  width: 120px;
+  height: 40px;
+  display: block;
+  margin: 20px auto;
   text-align: center;
+  line-height: 40px;
+  text-decoration: none;
+  text-transform: capitalize;
+  background-color: #ec0e0e;
+  color: #fff;
+  transition: translate 0.3s;
 }
-nav a:nth-child(2) {
-  font-size: 2em;
-}
-
-.text {
-  border: 2px dashed;
-}
-.text p:first-of-type {
-  background-color: rgb(241, 162, 162);
-}
-.text p:last-of-type {
-  background-color: rgb(135, 52, 174);
+.btn:hover {
+  translate: 1px 1px;
 }/*# sourceMappingURL=styles.css.map */
