--- a/styles.scss
+++ b/styles.scss
@@ -1,75 +1,124 @@
-*, 
+*,
 *::after,
 *::before {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
-html, body {
-    height: 100%;
+html,
+body {
+  height: 100%;
 }
 
 html {
-    font-family: "Lato", sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 h1 {
-    text-align: center;
-    margin: 50px 0;
-    text-transform: uppercase;
-    font-size: 5em;
+  text-align: center;
+  margin: 50px 0;
+  text-transform: uppercase;
+  font-size: 5em;
 }
 
 .container {
-    max-width: 900px;
-    margin: 0 auto;
-    padding: 0 20px;
+  max-width: 900px;
+  margin: 0 auto;
+  padding: 0 20px;
 }
 
 .parent {
-    border: 2px solid;
-    height: 400px;
-    width: 400px;
-    padding: 20px;
-    // .child {
-    //     width: 200px;
-    //     height: 200px;
-    //     background-color: #13d8d5;
-    // }
-    img {
-        // rotate: 135deg;
-        // transform: rotate(45deg); // old way 
-        // width: 400px;
-        // height: 400px;
-        // scale: 2;
-        // transform: scale(2); // old way
-        // translate x y
-        // translate: 200px 300px
-        // transform: translate(200px, 300px); // old way
-        // transform: skew(10deg, 20deg);
+  border: 2px solid;
+  height: 400px;
+  width: 400px;
+  // img {
+  //     animation-name: anything;
+  //     animation-duration: 3s;
+  //     animation-iteration-count: 3;
+  //     animation-play-state: running; // paused ot running
+  //     animation-direction: alternate;
+  //     animation-fill-mode: forwards;
+  //     animation-timing-function:ease-in-out;
+  //     animation-delay: 2s;
+  // }
+}
+.child {
+  width: 200px;
+  height: 200px;
+  animation-name: fade;
+  animation-duration: 2s;
+  animation-fill-mode: forwards;
+  animation-iteration-count: infinite;
+  animation-timing-function: linear;
+  animation-direction: reverse;
+}
+
+@keyframes anything {
+  to {
+    // rotate: 360deg
+    // margin-top: 200px
+    translate: 200px 200px;
+  }
+}
+
+@keyframes fade {
+  //   from {
+  //     background-color: #e91193;
+  //     border-radius: none;
+  //   }
+
+  //   to {
+  //     background-color: #0965ee;
+  //     border-radius: 50%
+  //   }
+  0% {
+    background-color: #e91193;
+    border-radius: none;
+  }
+
+  50% {
+    scale: 2
+  }
+
+  100% {
+    background-color: #0965ee;
+    border-radius: 50%;
+  }
+}
+
+.animate-me {
+    animation: pulse 1s;
+    animation-iteration-count: infinite;
+    animation-timing-function: ease-in-out;
+    animation-fill-mode: forwards;
+    animation-direction: reverse;
+}
+
+@keyframes pulse {
+    to {
+        opacity: 0;
     }
 }
 
 .btn {
-    width: 120px;
+    width: 150px;
     height: 40px;
-    // border: 1px solid;
+    margin: 50px auto;
     display: block;
-    margin: 20px auto;
-    text-align: center;
-    line-height: 40px;
-    text-decoration: none;
-    text-transform: capitalize;
-    background-color: #ec0e0e;
-    color: #fff;
-    transition: translate 0.3s;
-    
+    animation-name: shake;
+    animation-duration: 1s;
+    animation-iteration-count: infinite;
+    animation-play-state: paused;
     &:hover {
-        // scale: 1.01
-        translate: 1px 1px
+        animation-play-state: running;
     }
 }
 
+@keyframes shake {
 
-
+    to {
+        transform: skew(1deg, 1deg);
+    }
+    
+}
