--- a/styles.css
+++ b/styles.css
@@ -28,70 +28,8 @@ h1 {
   padding: 0 20px;
 }
 
-.parent {
-  border: 2px solid;
-  height: 400px;
+svg {
   width: 400px;
-}
-
-.child {
-  width: 200px;
-  height: 200px;
-  animation-name: fade;
-  animation-duration: 2s;
-  animation-fill-mode: forwards;
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-  animation-direction: reverse;
-}
-
-@keyframes anything {
-  to {
-    translate: 200px 200px;
-  }
-}
-@keyframes fade {
-  0% {
-    background-color: #e91193;
-    border-radius: none;
-  }
-  50% {
-    scale: 2;
-  }
-  100% {
-    background-color: #0965ee;
-    border-radius: 50%;
-  }
-}
-.animate-me {
-  animation: pulse 1s;
-  animation-iteration-count: infinite;
-  animation-timing-function: ease-in-out;
-  animation-fill-mode: forwards;
-  animation-direction: reverse;
-}
-
-@keyframes pulse {
-  to {
-    opacity: 0;
-  }
-}
-.btn {
-  width: 150px;
-  height: 40px;
-  margin: 50px auto;
-  display: block;
-  animation-name: shake;
-  animation-duration: 1s;
-  animation-iteration-count: infinite;
-  animation-play-state: paused;
-}
-.btn:hover {
-  animation-play-state: running;
-}
-
-@keyframes shake {
-  to {
-    transform: skew(1deg, 1deg);
-  }
+  height: 400px;
+  border: 1px dotted;
 }/*# sourceMappingURL=styles.css.map */
